# Moni-loans

./: README.md  docker-compose.yml
backend-moni/: .env.example  Dockerfile  README.md  pyproject.toml
backend-moni/loan/: models.py  serializers.py  services.py  urls.py  views.py
backend-moni/loan/management/commands/: seed_loans.py
backend-moni/loan/migrations/: 0001_initial.py
backend-moni/loan/tests/: test_admin_api.py  test_api.py  test_commands.py  test_services.py
backend-moni/main/: permissions.py  settings.py  urls.py
backend-moni/user/: serializers.py  signals.py  urls.py  views.py
backend-moni/user/tests/: test_api.py
frontend-moni/: env.d.ts  package-lock.json  package.json
frontend-moni/src/: index.css  main.jsx
frontend-moni/src/components/: Button.tsx  LoanTable.tsx  TopBar.tsx
frontend-moni/src/contexts/: UserContext.tsx
frontend-moni/src/pages/AdminLoginPage/: index.tsx
frontend-moni/src/pages/DashboardPage.tsx/: index.tsx
frontend-moni/src/pages/loanRequestPage/: index.tsx
frontend-moni/src/routes/: ProtectedRoute.tsx  index.tsx
frontend-moni/src/utils/: Api.ts  Auth.ts
